# Mpcee

./: .gitignore  Makefile  README.md
server/: go.mod  go.sum  main.go
server/conf/: app.conf
server/controllers/: default.go  psi.go  session.go  session_key.go  sgx.go  user.go
server/models/: models.go
server/routers/: router.go
server/static/css/: bootstrap.css  font-awesome.min.css  lottiefiles.css  style.css
server/static/js/: login.js  register.js
server/tests/: default_test.go
server/views/: index.html  login.html  psi.html  register.html
tee/: Makefile
tee/app/: Cargo.toml
tee/app/src/: lib.rs
tee/enclave/: Cargo.toml  Enclave.edl
tee/enclave/src/: lib.rs
