[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"

[lib]
name = "tee"
crate-type = ["staticlib"]

[dependencies]
sgx_types = { rev="v1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { rev="v1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
lazy_static = "1.4.0"