[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_align_struct_attribute = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_alloc = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_backtrace = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_backtrace_sys = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_build_helper = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_cov = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_crypto_helper = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_demangle = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_libc = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_no_tstd = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_rand = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_rand_derive = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize_derive = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_serialize_derive_internals = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tcrypto = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tcrypto_helper = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tdh = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tkey_exchange = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tprotected_fs = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_trts = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tse = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tseal = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tstd = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_tunittest = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_types = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_ucrypto = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_unwind = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_urts = { rev="v1.1.4", git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
